<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news"
        android:icon="@drawable/top_stories_icon"
        android:enabled="true"
        android:title="@string/news" />

    <item
        android:id="@+id/weather"
        android:enabled="true"
        android:icon="@drawable/sun_icon"
        android:title="@string/weather"/>

    <item
        android:id="@+id/read_list"
        android:enabled="true"
        android:icon="@drawable/to_read_icon"
        android:title="@string/read_list"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"/>





    </menu>