<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_nav_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_appbar_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/toolbar_newsfeed_top"
            app:navigationIcon="@drawable/logo_placeholder"
            app:title="@string/news"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_read" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_business" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_entertainment" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_health" />
    </com.google.android.material.tabs.TabLayout>

    <!--RecyclerView populating page using row_news_article.xml-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>